<resources>
    <string name="app_name">Welcome to HomeCare!</string>
    <string name="action_settings">Settings</string>
    <string name="new_info">Save information</string>
    <string name="review_info">Search by date</string>
    <string name="search_body_sys"> Search by body system</string>
    <string name="profile">Set Up stock answer</string>
    <string name="title_activity_enter_information">Save Patient Information</string>
    <string name="title_activity_set_up">Set Up Stock Answers</string>
    <string name="title_activity_review_information">Search By Date</string>
    <string name="title_activity_search_body_sys">Search By Body System</string>
    <string name="title_activity_my_custom_adapter">MyCustomAdapter</string>
    <string name="new_stock_answer">Enter your new Stock Answer.</string>
    <string-array name="bodysystem_array">
        <item>Neuro</item>
        <item>Resp</item>
        <item>CV</item>
        <item>PRN</item>
        <item>GI</item>
        <item>GU</item>
        <item>Musc-Skel</item>
        <item>Pain</item>
        <item>Gen</item>
        <item>Psych</item>
        <item>Integ</item>
    </string-array>
    <string name="title_activity_review_date">Results</string>
    <string name="title_activity_review_by_body_sys">Search By Body System</string>
    <string name="review_4h">Review 4h Shift</string>
    <string name="title_activity_review4h">Review Last 4 Hours</string>
    <string name="title_activity_search_options">Search Options</string>
    <string name="search">Search Information</string>
    <string name="search_name">Search by Nurse Name</string>
    <string name="title_activity_review_nurse_name">Search by Nurse Name</string>

</resources>