<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.whjt2_000.homecare.SearchOptions"
    tools:showIn="@layout/activity_search_options">



    <Button android:id="@+id/review_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_info"
        android:onClick="reviewInformation" />

    <Button android:id="@+id/search_body_sys"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/search_body_sys"
        android:layout_below ="@id/review_info"
        android:onClick="reviewInfoByBodySys"/>

    <Button android:id="@+id/review_4h"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_4h"
        android:layout_below ="@id/search_body_sys"
        android:onClick="review4h"/>


</RelativeLayout>
