<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.whjt2_000.homecare.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView android:id = "@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to HomeCare!"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <Button android:id="@+id/new_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/text"
        android:text="@string/new_info"
        android:onClick="enterInformation"/>

    <Button android:id="@+id/review_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/new_info"
        android:text="@string/review_info"
        android:onClick="reviewInformation"/>

    <Button android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/review_info"
        android:text="@string/profile"
        android:onClick="patientProfile"/>

</RelativeLayout>
